<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Callup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="self_save">Self Save</string>
    <string name="friend_bomb">Friend Bomb</string>
    <string name="set_level_header">The Difficulty Level Of Getting Up</string>
    <string name="slide_left">If you Slide Left</string>
    <string name="not_want_get_up">Don\'t Want To Get Up</string>
    <string name="dizzy">Feel Dizzy When Getting Up</string>
    <string name="dreamful">Always Dreamful</string>
    <string name="insomnia">Always Insomnic</string>
    <string name="often_stay_up">Often Stay Up</string>
    <string name="upset">Upset Without Reason</string>
    <string name="search_scene">Search Scene</string>
    <string name="phone">Register Phone: </string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="my_password">My Password: </string>
    <string name="re_input_password">Re-input Password: </string>
    <string name="error_login_failed">Account or password error.\nEnter again. </string>
    <string name="error_server_connection_failed">Failed to connect the server.</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="clock_list">Clock List</string>
    <string name="choose_level_finished_message">If you have finished choosing conditions before,
        please click the below button to join Call Up travel&#8230;
    </string>
    <string name="road">Road</string>
    <string name="cancel">Cancel</string>
    <string name="repeat">Repeat</string>
    <string name="everyday">Everyday</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>

    <string name="search_friends">Search PK Friends or Groups</string>
    <string name="register_params_error">IM register params error，please check it.</string>

    <string name="delete">Delete</string>
    <string name="alarm_operation">Alarm Operation</string>

    <string name="error_fragment_not_found">Fragment %s not found!</string>
    <string name="bombs">Bombs</string>
    <string name="friends">Friends</string>
    <string name="random">Random</string>
    <string name="profile">Profile</string>
    <string name="friend_list">Friend List</string>

    <string name="account_info">Account: %s</string>
    <string name="edit_remark">Edit Remark</string>
    <string name="region">Region</string>
    <string name="what_s_up">What\'s Up</string>
    <string name="send_bombs">Send Bombs</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="level_setting">Level Settings</string>
    <string name="about_callup">About CallUp</string>
    <string name="logout">Log Out</string>

    <string name="send_bomb_message">Declare a PK! \n%s</string>
    <string name="receive_bomb_message">Receive a PK! \n%s</string>
    <string name="pk">PK</string>
    <string name="loading">Loading...</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="refused">Refused</string>
    <string name="waiting">Waiting</string>
    <string name="send_a_bomb">Send you a bomb</string>
    <string name="error_result">The calculation result is wrong!</string>
    <string name="win_pk">%s wined the pk</string>
    <string name="callup_id">CallUp ID</string>
</resources>
