<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_e6e9ee">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_967bdc"
        android:padding="5dp">
        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:src="@drawable/left_bracket"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/backTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_list"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/backImageView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@android:color/white">
        <dlmj.callup.UI.View.CircleImageView
            android:id="@+id/photoImageView"
            android:layout_width="74dp"
            android:layout_height="74dp"
            view:type="round"
            view:borderRadius="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/accountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="生如夏花之灿烂"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/white"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/edit_remark"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:paddingLeft="10dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/what_s_up"
            android:paddingLeft="10dp"
            android:textSize="16sp"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/sendBombsButton"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/submit_btn_back"
        android:text="@string/send_bombs"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>
</LinearLayout>